--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     
-    <header>
+    <header class="container-header">
+        <h1>Header</h1>
         <nav></nav>
     </header>
 
     <main>
 
     </main>
-    
+
     <section>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nam delectus quasi sapiente, similique illo eos debitis totam repellendus neque quam ad libero! Inventore quis dolores molestias? Saepe, molestiae accusantium.</p>
     </section>
