--- a/index.html
+++ b/index.html
@@ -14,12 +14,31 @@
     </header>
 
     <main>
+        <section>
+            <video src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4">
 
+            </video>
+
+            <video controls="">
+                <source type="video/webm" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm">
+                <source type="video/mp4" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4">
+            </video>
+
+             <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" width="420" height="315"></iframe>
+        </section>
+
+        <section class="container-section-promo">
+            <video controls=""></video>
+            <article class="item-article">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nam delectus quasi sapiente, similique illo eos debitis totam repellendus neque quam ad libero! Inventore quis dolores molestias? Saepe, molestiae accusantium.</p>
+            </article>
+            
+        </section>
     </main>
 
-    <section>
+    <!-- <section>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nam delectus quasi sapiente, similique illo eos debitis totam repellendus neque quam ad libero! Inventore quis dolores molestias? Saepe, molestiae accusantium.</p>
-    </section>
+    </section> -->
 
     <footer></footer>
 
