Se realiza agrega una barra de navegacion como prueba Task001

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     
     <header class="container-header">
         <h1>Header</h1>
-        <nav></nav>
+        <!-- Task001 se agrega una etiqueta de navegacion para pruebas -->
+        <nav class="container-nav">
+            <ul>
+                <li><a href="#">Conocenos</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Destacados</a></li>
+                <li><a href="#">Notocias</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
