Re realizan los cambios correspondientes a Task002

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
             <article class="item-article">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nam delectus quasi sapiente, similique illo eos debitis totam repellendus neque quam ad libero! Inventore quis dolores molestias? Saepe, molestiae accusantium.</p>
             </article>
-            
+        </section>
+
+        <section class="container-imagen">
+            <h2>Imagenes de paisajes</h2>
+            <img src="https://kbdevstorage1.blob.core.windows.net/asset-blobs/19530_en_1" alt="Mont Blanc Massif, Graian Alps wallpaper">
+            <img src="https://kbdevstorage1.blob.core.windows.net/asset-blobs/19132_en_1" alt="Crested Butte, Colorado, U.S. wallpaper">
         </section>
     </main>
 
